# streamlit-accounting

./: data_flow_test.py  pyproject.toml  requirements.txt  tarot.py
.devcontainer/: devcontainer.json
