[tool.poetry]
name = "yinyin-accounting"
version = "0.1.0"
description = ""
authors = ["CT Wu <ct@shopline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
